[tool.poetry]
name = "cx-studio"
version = "0.1.0"
description = "Module for professional video editing."
authors = ["xiii_1991 <xiii_1991@163.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
